# eval-hub

./: .coderabbit.yaml  .dockerignore  .gitignore  .golangci.yml  .pre-commit-config.yaml  AGENTS.md  API.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Containerfile  Dockerfile.konflux  LOCAL_MODE.md  MCP.md  MLFLOW.md  Makefile  OTEL.md  README-GO.md  README.md  SECURITY.md  codecov.yml  go.mod  go.sum  osv-scanner.toml  package-lock.json  package.json  pyproject.toml
.agentready/: assessment-20260212-110157.json  assessment-latest.json  report-20260212-110157.html  report-20260212-110157.md  report-latest.html  report-latest.md
.claude/rules/: evalhub-mcp-service.md  evalhub-service.md
.github/: CODEOWNERS  dependabot.yml  requirements-configmap-sync.in  requirements-configmap-sync.txt
.github/scripts/: verify-requested-reviewer-approvals.sh
.github/workflows/: check-trustyai-service-operator-configmap-sync.yml  ci-mcp.yml  ci-python-mcp.yml  ci-python-server.yml  ci.yml  codeql.yml  commitlint.yml  dependency-review.yml  golangci-lint.yml  publish-python-mcp.yml  publish-python-server.yml  release-mcp.yml  required-reviewer-approvals.yml  scorecard.yml  validate-configs.yml
.tekton/: eval-hub-pull-request.yaml  eval-hub-push.yaml
cmd/eval_hub/: main.go
cmd/eval_runtime_init/: main.go  main_test.go
cmd/eval_runtime_sidecar/: main.go
cmd/evalhub_mcp/: main.go  main_test.go
cmd/validate_configs/: main.go
config/: config.yaml  mcp_local.yaml
docs/: index-private.html  index-public.html  index.html  openapi-internal.json  openapi-internal.yaml  openapi.json  openapi.yaml
examples/: api_examples.ipynb  end_to_end_llm_evaluation_on_openshift.ipynb
examples/local-lighteval/: .gitignore  evalhub-client.ipynb  pyproject.toml  readme.md
formula/: evalhub-mcp.rb
python-mcp/: .gitignore  README.md  pyproject.toml  setup.py
python-mcp/shims/: eval-hub-mcp  eval-hub-mcp.cmd
python-server/: DEVELOPMENT.md  README.md  pyproject.toml
scripts/: check_configmap_sync.py  gha_wheel_sanity_test.sh  start_mcp.sh  start_server.sh  start_sidecar.sh
tests/: config.yaml
(+482 files in other folders)
